--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1>hola mundo</h1>
     <h2>adios mundo</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam possimus similique molestias expedita assumenda, aliquam illum hic magnam voluptatibus tempora velit, magni ipsa doloribus esse fugit. Maiores ea ut in.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam possimus
+         similique molestias expedita assumenda, aliquam illum hic magnam voluptatibus tempora velit, 
+         magni ipsa doloribus esse fugit. Maiores ea ut in.</p>
+         <p>joya!</p>
 </body>
 </html>
